configurable dotfiles path and fix for missing install.sh

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,7 @@
 
 - hosts: osx
   vars:
+    dotfiles_repo: git@github.com:krzysztof-magosa/dotfiles.git
     dotfiles_path: ~/.dotfiles
 
     brews:
