--- a/roles/projects/tasks/main.yml
+++ b/roles/projects/tasks/main.yml
@@ -5,6 +5,11 @@
   file: path={{ projects_path }} state=directory
 
 - name: Create projects categories
-  file: path={{ projects_path }}/{{ item }} state=directory
-  with_items: projects_categories
-  when: projects_categories is defined
+  file: path={{ projects_path }}/{{ item['category'] }} state=directory
+  with_items: projects_repos
+  when: projects_repos is defined
+
+- name: Clone repositories
+  git: repo={{ item['repo'] }} dest={{ projects_path }}/{{ item['category'] }}/{{ item['name'] }} recursive=true update=no
+  with_items: projects_repos
+  when: projects_repos is defined
