add condition and set default variables for dotfiles

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -3,4 +3,6 @@
 
 - hosts: dotfiles
   roles:
-    - dotfiles
+    - role: dotfiles
+      when: dotfiles_path is defined and dotfiles_repo is defined
+
