--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -1,5 +1,6 @@
 dotfiles_repo: git@github.com:krzysztof-magosa/dotfiles.git
 dotfiles_path: ~/.dotfiles
+dotfiles_init_cmd: ~/.dotfiles/install.sh --force
 
 brews:
   - coreutils
