--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -1,13 +1,10 @@
 ---
 # File: roles/homebrew/tasks/main.yml
 
-- name: Check if homebrew is installed
-  stat: path=/usr/local/bin/brew
-  register: brew_stat
-
 - name: Install homebrew
   shell: ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
-  when: brew_stat.stat.exists == false
+  args:
+    creates: /usr/local/bin/brew
 
 - name: Install brew-cask
   homebrew: name=caskroom/cask/brew-cask state=present
