use homebrew_cask

--- a/roles/software/tasks/osx.yml
+++ b/roles/software/tasks/osx.yml
@@ -5,12 +5,7 @@
   homebrew: name={{ item }} state=present
   with_items: brews
 
-- name: Check for installed casks
-  shell: brew cask list --appdir={{ applications_path | quote }}
-  register: installed_applications
-  ignore_errors: true
-
 - name: Install apps with brew-cask
-  shell: brew cask install --appdir={{ applications_path | quote }} {{ item }}
+  homebrew_cask: name={{ item }} state=present
   with_items: casks
-  when: "item not in installed_applications.stdout.splitlines()"
+
