set default ruby version

--- a/roles/dev-ruby/tasks/main.yml
+++ b/roles/dev-ruby/tasks/main.yml
@@ -22,3 +22,8 @@
   with_nested:
     - ruby_gems
     - ruby_versions
+
+- name: Set default ruby version
+  shell: rbenv global 2.2.3
+  args:
+    creates: ~/.rbenv/version
