--- a/roles/dev-ruby/tasks/main.yml
+++ b/roles/dev-ruby/tasks/main.yml
@@ -15,6 +15,7 @@
 
 - name: Install ruby gems
   gem: name="{{ item[0] }}" executable=~/.rbenv/shims/gem user_install=no
+  notify: rehash rbenv
   environment:
     RBENV_VERSION: "{{ item[1] }}"
   tags:
