accept ssh hostkeys

--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -2,7 +2,7 @@
 # File: roles/dotfiles/tasks/main.yml
 
 - name: Clone dotfiles
-  git: "repo={{ dotfiles_repo }} dest={{ dotfiles_path }} recursive=true"
+  git: "repo={{ dotfiles_repo }} dest={{ dotfiles_path }} recursive=true accept_hostkey=yes"
   register: dotfiles
 
 - name: Check if dotfiles contains install.sh
