--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -4,8 +4,9 @@
 - name: Check current shell
   shell: echo $SHELL
   register: current_shell
-  when: shell is defined
+  when: shell is defined and ansible_os_family == "Darwin"
 
 - name: Set default shell
   shell: chsh -s {{ shell }}
-  when: shell is defined and current_shell.stdout != "{{ shell }}"
+  when: shell is defined and current_shell.stdout != "{{ shell }}" and ansible_os_family == "Darwin"
+
