--- a/roles/dev-common/tasks/main.yml
+++ b/roles/dev-common/tasks/main.yml
@@ -1,9 +1,16 @@
 ---
 # File: roles/dev-common/tasks/main.yml
 
-- name: Install dev utils
+- name: Install dev utils | OS X
   homebrew: pkg={{ item }} state=present
   with_items:
     - tig
     - git
+  when: ansible_os_family == "Darwin"
 
+- name: Install dev utils | CentOS
+  yum: pkg={{ item }} state=present
+  with_items:
+#    - tig
+    - git
+  when: ansible_distribution == "CentOS"
