--- a/roles/dev-php/tasks/main.yml
+++ b/roles/dev-php/tasks/main.yml
@@ -11,6 +11,13 @@
     - php56
   when: ansible_os_family == "Darwin"
 
+- name: Configure webtatic repository
+  become: yes
+  yum: name={{ item }} state=present
+  with_items:
+    - https://mirror.webtatic.com/yum/el7/epel-release.rpm
+    - https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
+
 - name: Install PHP | CentOS
   yum: pkg={{ item }} state=present
   with_items:
