--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -10,3 +10,12 @@
 - name: Install brew-cask
   homebrew: name=caskroom/cask/brew-cask state=present
   when: ansible_os_family == "Darwin"
+
+# Git is needed later for ansible module 'git'
+- name: Install git | OS X
+  homebrew: name=git state=latest
+  when: ansible_os_family == "Darwin"
+
+- name: Install git | CentOS
+  yum: name=git state=latest
+  when: ansible_distribution == "CentOS"
