--- a/roles/dev-php/tasks/main.yml
+++ b/roles/dev-php/tasks/main.yml
@@ -21,5 +21,9 @@
 - name: Install PHP | CentOS
   yum: pkg={{ item }} state=present
   with_items:
-    - php-cli
+    - php56w-cli
+    - php56w-fpm
+    - php56w-pdo
+    - php56w-pecl-memcached
+    - php56w-xml
   when: ansible_distribution == "CentOS"
