--- a/roles/dev-php/tasks/main.yml
+++ b/roles/dev-php/tasks/main.yml
@@ -19,6 +19,7 @@
     - https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
 
 - name: Install PHP | CentOS
+  become: yes
   yum: pkg={{ item }} state=present
   with_items:
     - php56w-cli
