--- a/roles/dev-php/tasks/main.yml
+++ b/roles/dev-php/tasks/main.yml
@@ -17,6 +17,7 @@
   with_items:
     - https://mirror.webtatic.com/yum/el7/epel-release.rpm
     - https://mirror.webtatic.com/yum/el7/webtatic-release.rpm
+  when: ansible_distribution == "CentOS"
 
 - name: Install PHP | CentOS
   become: yes
