--- a/roles/dev-cpp/tasks/main.yml
+++ b/roles/dev-cpp/tasks/main.yml
@@ -1,7 +1,24 @@
 ---
 # File: roles/dev-cpp/tasks/main.yml
 
-- name: Install compiler stuff
+- name: Install c/cpp stuff
   become: yes
-  yum: name=gcc-c++
+  yum: name={{ item }}
+  with_items:
+    - git-core
+    - zlib
+    - zlib-devel
+    - gcc-c++
+    - patch
+    - readline
+    - readline-devel
+    - libyaml-devel
+    - libffi-devel
+    - openssl-devel
+    - make
+    - autoconf
+    - automake
+    - libtool
+    - bison
+    - sqlite-devel
   when: ansible_distribution == "CentOS"
