--- a/roles/dev-ruby/tasks/main.yml
+++ b/roles/dev-ruby/tasks/main.yml
@@ -1,19 +1,32 @@
 ---
 # File: roles/dev-ruby/tasks/main.yml
 
-- name: Install rbenv stuff
+- name: Install rbenv stuff | OS X
   homebrew: name={{ item }}
   with_items:
     - rbenv
     - ruby-build
   when: ansible_os_family == "Darwin"
 
+- name: Install rbenv | CentOS
+  git: >
+    repo=git://github.com/sstephenson/rbenv.git
+    dest=~/.rbenv
+  when: ansible_distribution == "CentOS"
+
+- name: Install ruby-build | CentOS
+  git: >
+    repo=git://github.com/sstephenson/ruby-build.git
+    dest=~/.rbenv/plugins/ruby-build
+  when: ansible_distribution == "CentOS"
+
 - name: Install ruby versions
   shell: rbenv install {{ item }}
   args:
     creates: ~/.rbenv/versions/{{ item }}
   with_items: ruby_versions
-  when: ansible_os_family == "Darwin"
+  environment:
+    PATH: ~/.rbenv/bin:~/.rbenv/plugins/ruby-build/bin:{{ ansible_env.PATH }}
 
 - name: Install ruby gems
   gem: name="{{ item[0] }}" executable=~/.rbenv/shims/gem user_install=no
