--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -15,3 +15,13 @@
   become: yes
   user: name={{ ansible_ssh_user}} shell=/bin/zsh
   when: ansible_distribution == "CentOS"
+
+- name: Install oh my zsh
+  git: >
+    repo=https://github.com/robbyrussell/oh-my-zsh.git
+    dest=~/.oh-my-zsh
+
+- name: Install tig-rebase
+  git: >
+    repo=https://github.com/Nattfarinn/tig-rebase.git
+    dest=~/bin/tig-rebase
