--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -1,7 +1,29 @@
 ---
 # File: roles/fonts/tasks/main.yml
 
-- name: Install fonts
-  get_url: url={{ item['url'] }} dest="{{ fonts_path }}/{{ item['file'] }}" force=no
-  with_items: fonts
+- name: Check if we have powerline fonts already installed
+  stat: path="{{ ansible_env.HOME }}/Library/Fonts/Sauce Code Powerline Regular.otf"
+  register: fonts_stat
   when: ansible_os_family == "Darwin"
+
+- name: Download fonts
+  get_url: >
+    url=https://github.com/powerline/fonts/archive/master.zip
+    dest=/tmp/powerline-fonts-master.zip
+  when: ansible_os_family == "Darwin" and fonts_stat.stat.exists == False
+
+- name: Create directory to unpack fonts
+  file: path=/tmp/powerline-fonts-master state=directory
+  when: ansible_os_family == "Darwin" and fonts_stat.stat.exists == False
+
+- name: Unpack fonts
+  unarchive: >
+    copy=no
+    src=/tmp/powerline-fonts-master.zip
+    dest=/tmp/powerline-fonts-master
+  when: ansible_os_family == "Darwin" and fonts_stat.stat.exists == False
+
+- name: Install fonts
+  command: /tmp/powerline-fonts-master/fonts-master/install.sh
+  when: ansible_os_family == "Darwin" and fonts_stat.stat.exists == False
+
