variables for emacsd

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,6 +4,9 @@ dotfiles_repo: git@github.com:krzysztof-magosa/dotfiles.git
 dotfiles_path: ~/.dotfiles
 dotfiles_init_cmd: ~/.dotfiles/install.sh --force
 
+emacsd_repo: git@github.com:krzysztof-magosa/emacs.d.git
+emacsd_path: ~/.emacs.d
+
 brews:
   - coreutils
   - emacs
