--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -1,27 +1,5 @@
 ---
 # File: roles/shell/tasks/main.yml
 
-- name: Install zsh
-  become: yes
-  yum: name=zsh
-  when: ansible_distribution == "CentOS"
-
-- name: Set shell to zsh | OS X
-  become: yes
-  shell: chsh -s /bin/zsh {{ ansible_env.USER }}
-  when: ansible_os_family == "Darwin"
-
-- name: Set shell to zsh | CentOS
-  become: yes
-  user: name={{ ansible_ssh_user}} shell=/bin/zsh
-  when: ansible_distribution == "CentOS"
-
-- name: Install oh my zsh
-  git: >
-    repo=https://github.com/robbyrussell/oh-my-zsh.git
-    dest=~/.oh-my-zsh
-
-- name: Install tig-rebase
-  git: >
-    repo=https://github.com/Nattfarinn/tig-rebase.git
-    dest=~/bin/tig-rebase
+- include: zsh.yml
+- include: tools.yml
