--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -14,6 +14,7 @@ brews:
   - mtr
   - tree
   - wget
+  - tig
 
 casks:
   - google-chrome
@@ -23,4 +24,4 @@ casks:
   - slack
   - spotify
   - iterm2
-
+  - spectacle
