--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,8 +5,10 @@
 - name: Install git | OS X
   homebrew: name=git state=latest
   when: ansible_os_family == "Darwin"
+  tags: common
 
 - name: Install git | CentOS
   become: yes
   yum: name=git state=latest
   when: ansible_distribution == "CentOS"
+  tags: common
