whitelist google analytics

--- a/roles/security/tasks/hosts.yml
+++ b/roles/security/tasks/hosts.yml
@@ -4,6 +4,9 @@
     dest=~/.hosts
     force=yes
 
+- name: Template whitelist file
+  template: src=whitelist dest=~/.hosts/whitelist
+
 - name: Initialize hosts project
   command: python updateHostsFile.py -a -n -r -b
   args:
