--- a/roles/vm-host/tasks/main.yml
+++ b/roles/vm-host/tasks/main.yml
@@ -1,40 +1,12 @@
 ---
 # File: roles/vm-host/tasks/main.yml
 
-- name: Install VirtualBox
-  homebrew_cask: name=virtualbox
-  tags: vm-host
+- include: install.yml
+  tags:
+    - vm_host
+    - vm_host_install
 
-- name: Install Vagrant
-  homebrew_cask: name=vagrant
-  register: vagrant
-  tags: vm-host
-
-- name: Check installed plugins
-  shell: vagrant plugin list | awk '{print $1}'
-  register: dotvm_installed
-  tags: vm-host
-
-- name: Install DotVm plugin
-  shell: vagrant plugin install vagrant-dotvm
-  when: not "vagrant-dotvm" in dotvm_installed.stdout
-  tags: vm-host
-
-- name: Create directory for DotVM configuration
-  file:
-    path: ~/.dotvm
-    state: directory
-  tags: vm-host
-
-- name: Initialize DotVM
-  shell: vagrant dotvm init
-  args:
-    chdir: ~/.dotvm
-    creates: ~/.dotvm/Vagrantfile
-  tags: vm-host
-
-- name: Fetch playground dotvm configuration
-  git: >
-    repo=git@github.com:krzysztof-magosa/playground.git
-    dest=~/.dotvm/projects/playground
-  tags: vm-host
+- include: config.yml
+  tags:
+    - vm_host
+    - vm_host_config
