rework security_osx and remove not working rule

--- a/roles/security/tasks/osx.yml
+++ b/roles/security/tasks/osx.yml
@@ -1,14 +1,22 @@
 - name: Require password to unlock screen
-  command: defaults write com.apple.screensaver askForPassword 1
+  osx_defaults:
+    domain: com.apple.screensaver
+    key: askForPassword
+    type: boolean
+    value: yes
 
 - name: Require password immediately after locking
-  command: defaults write com.apple.screensaver askForPasswordDelay 0
+  osx_defaults:
+    domain: com.apple.screensaver
+    key: askForPasswordDelay
+    type: string
+    value: 0
 
 - name: Show all extensions
-  command: defaults write -g AppleShowAllExtensions -bool true
-
-- name: Dont send stuff from Spotlight to Apple
-  command: defaults write com.apple.lookup lookupEnabled -dict-add suggestionsEnabled -int 0
+  osx_defaults:
+    key: AppleShowAllExtensions
+    type: boolean
+    value: yes
 
 - name: Reload applications to make settings live
   command: killall Dock Finder
