don't use executables produced by rbenv

--- a/roles/jekyll/tasks/main.yml
+++ b/roles/jekyll/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 
 - name: Install jekyll
-  gem: name=jekyll executable=~/.rbenv/shims/gem
+  gem: name=jekyll
   tags: jekyll
 
 - name: Install glynn
-  gem: name=glynn executable=~/.rbenv/shims/gem
+  gem: name=glynn
   tags: jekyll
 
