--- a/roles/security/tasks/osx.yml
+++ b/roles/security/tasks/osx.yml
@@ -9,7 +9,7 @@
   osx_defaults:
     domain: com.apple.screensaver
     key: askForPasswordDelay
-    type: string
+    type: float
     value: 0
 
 - name: Show all extensions
