--- a/roles/software/tasks/osx.yml
+++ b/roles/software/tasks/osx.yml
@@ -2,9 +2,9 @@
 
 - name: Install homebrew packages
   homebrew: name={{ item }} state=present
-  with_items: brews
+  with_items: "{{ brews }}"
 
 - name: Install apps with brew-cask
   homebrew_cask: name={{ item }} state=present
-  with_items: casks
+  with_items: "{{ casks }}"
 
