don't install avast

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -7,6 +7,8 @@ dotfiles_init_cmd: ~/.dotfiles/install.sh --force
 emacsd_repo: git@github.com:krzysztof-magosa/emacs.d.git
 emacsd_path: ~/.emacs.d
 
+keepassx_db: "~/Google Drive/keepassx.kdbx"
+
 brews:
   - coreutils
   - emacs
@@ -34,4 +36,3 @@ casks:
   - spotify
   - iterm2
   - spectacle
-  - avast
