i don't use it anymore outside mac

--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: all
+- hosts: laptops
   roles: []
 
-- hosts: all
+- hosts: laptops
   gather_facts: no
   environment:
     PATH: "{{ ansible_env.PATH }}:/opt/homebrew/bin:{{ ansible_env.HOME }}/.rbenv/bin:{{ ansible_env.HOME }}/.rbenv/plugins/ruby-build/bin"
